--- a/notebooks/lstm.ipynb
+++ b/notebooks/lstm.ipynb
@@ -7228,7 +7228,8 @@
     "                  dataloader, \n",
     "                  nn.MSELoss(), \n",
     "                  optim.Adam(model.parameters(), lr=0.001),\n",
-    "                  if_wandb=True)\n",
+    "                  if_wandb=True,\n",
+    "                  wandb_project_name=\"drone-detection-lstm\",)\n",
     "\n",
     "trainer.train(epochs=500)"
    ]
@@ -7238,6 +7239,22 @@
    "metadata": {},
    "source": [
     "# Make predictions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "predefined measurement error $e$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E = 0.0"
    ]
   },
   {
@@ -7264,7 +7281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.-1"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
