--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -59,7 +59,7 @@
    ],
    "source": [
     "sns.set_theme(style=\"whitegrid\")\n",
-    "plt.plot(spoofed_4['Time'])"
+    "plt.plot(spoofed_4['Time'])\n"
    ]
   }
  ],
