Corrected display of detection time

--- a/src/Garrett.ipynb
+++ b/src/Garrett.ipynb
@@ -126,13 +126,13 @@
     }
    ],
    "source": [
+    "#Garrett's first method\n",
     "data['d_e']=data.apply(lambda row: haversine((row['GPS_lat'],row['GPS_long']),(row['lat'],row['lon'])), axis=1)\n",
     "#Calculate the impact of different thresholds.\n",
     "threadshold=np.arange(0.5,11,0.5,dtype=float)\n",
     "for th in threadshold:\n",
     "    name='th_'+str(th)\n",
     "    data[name]=data.apply(lambda row: row['d_e']>th, axis=1)\n",
-    "data.to_csv('test.csv')\n",
     "print(data)"
    ]
   },
@@ -492,7 +492,7 @@
     "    else:\n",
     "        return False\n",
     "\n",
-    "#Cusum method\n",
+    "#Garrett's Cusum method\n",
     "threadshold=np.arange(5,130,5,dtype=int)\n",
     "window_length=np.arange(2,100,5,dtype=int)\n",
     "\n",
