Moved to a correct folder.

--- a/notebooks/Garrett.ipynb
+++ b/notebooks/Garrett.ipynb
@@ -492,7 +492,7 @@
     "    else:\n",
     "        return False\n",
     "\n",
-    "#Garrett's Cusum method\n",
+    "#Garrett's CUSUM method\n",
     "threadshold=np.arange(5,130,5,dtype=int)\n",
     "window_length=np.arange(2,100,5,dtype=int)\n",
     "\n",
