add raytune support

--- a/notebooks/whelan.ipynb
+++ b/notebooks/whelan.ipynb
@@ -9178,6 +9178,9 @@
     "\n",
     "\n",
     "# estimated_trace4, trace4_spoofed \n",
+    "# spoofed_4 = data_preprocessing('../data/drive-me-not/processed/trace4_spoofed.csv', \n",
+    "#                              selected_attributes= ['GPS_lat', 'GPS_long', 'Time', 'vx', 'vy', 'ax', 'ay', 'spoofed'], \n",
+    "#                              trace_num=4)\n",
     "spoofed_4 = data_preprocessing('../data/drive-me-not/processed/trace4_spoofed.csv', \n",
     "                             selected_attributes= ['GPS_lat', 'GPS_long', 'Time', 'vx', 'vy', 'ax', 'ay', 'spoofed'], \n",
     "                             trace_num=4)\n",
