--- a/notebooks/Garrett.ipynb
+++ b/notebooks/Garrett.ipynb
@@ -361,7 +361,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_8560\\2750859828.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_1088\\2750859828.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  ax3.legend(title=filename)\n"
      ]
     },
@@ -405,7 +405,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_8560\\3033085937.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_1088\\3033085937.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  ax3.legend(title=filename)\n"
      ]
     },
@@ -449,7 +449,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_8560\\1364428401.py:16: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_1088\\1364428401.py:16: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  ax3.legend(title=filename)\n"
      ]
     },
@@ -794,7 +794,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_8560\\371324411.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_1088\\371324411.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  ax3.legend(title=filename)\n"
      ]
     },
@@ -838,7 +838,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_8560\\3800024093.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_1088\\3800024093.py:13: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  ax3.legend(title=filename)\n"
      ]
     },
@@ -876,14 +876,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_8560\\2836894940.py:16: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
+      "C:\\Users\\liu\\AppData\\Local\\Temp\\ipykernel_1088\\3481102724.py:16: UserWarning: No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n",
       "  ax3.legend(title=filename)\n"
      ]
     },
@@ -906,7 +906,7 @@
       "threshold of CUSUM method:  0.0\n",
       "Weight of CUSUM method:  18\n",
       "FP rate of CUSUM method:  0.11955484896661367\n",
-      "detection time of CUSUM method:  107.057\n"
+      "detection time of CUSUM method:  105.257\n"
      ]
     }
    ],
@@ -937,7 +937,7 @@
     "print(\"threshold of CUSUM method: \",r)\n",
     "print(\"Weight of CUSUM method: \",c)\n",
     "print(\"FP rate of CUSUM method: \",fp_data[r][c])\n",
-    "print(\"detection time of CUSUM method: \",detect_time_data[r][c]+c/10)"
+    "print(\"detection time of CUSUM method: \",detect_time_data[r][c])"
    ]
   }
  ],
